--- a/sharelist/templates/base.html
+++ b/sharelist/templates/base.html
@@ -16,7 +16,7 @@
 							<td><a href="{% url 'index' %}">ShareList</a></td>
 							<td style="text-align:right;">
 								{% if user.is_authenticated %}
-								<p>{{ user.username }} <p><a href="{% url 'logout' %}">Выйти</a></p></p>
+								{{ user.username }} <a href="{% url 'logout' %}">Выйти</a>
 								{% else %}
 								<a href="{% url 'login' %}">Войти</a>
 								<a href="{% url 'signup' %}">Зарегистрироваться</a>
