--- a/sharelist/templates/base.html
+++ b/sharelist/templates/base.html
@@ -13,10 +13,11 @@
 				<div>
 					<table class="tablehead">
 						<tr>
-							<td><a href="{% url 'index' %}">ShareList</a></td>
+							<td><a href="{% url 'startpage' %}">ShareList</a></td>
 							<td style="text-align:right;">
 								{% if user.is_authenticated %}
 								{{ user.username }} <a href="{% url 'logout' %}">Выйти</a>
+								<a href="{% url 'mainpage' %}">Мои списки</a>
 								{% else %}
 								<a href="{% url 'login' %}">Войти</a>
 								<a href="{% url 'signup' %}">Зарегистрироваться</a>
