--- a/sharelist/templates/startpage.html
+++ b/sharelist/templates/startpage.html
@@ -1,5 +1,5 @@
 <!-- templates/main/mainpage.html -->
 {% extends 'base.html' %}
 {% block content %}
-<h1>MAIN PAGE</h1>
+<h1>START PAGE</h1>
 {% endblock content %}
