--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -2,6 +2,8 @@
 {% block content %}
 <form action="" method="post">{% csrf_token %}
 	{{ form.as_p }}
+	<p>Пункты списка:</p>
+	{{ formset.as_p }}
 	<input type="submit" value="Save">
 </form>
 
