--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <form action="" method="post">{% csrf_token %}
-	{{ form.as_p }}
+	{{ userlist_form.as_p }}
 	<p>Пункты списка:</p>
-	{{ formset.as_p }}
+	{{ item_formset.as_p }}
 	<input type="submit" value="Save">
 </form>
 
