--- a/sharelist/templates/mainpage.html
+++ b/sharelist/templates/mainpage.html
@@ -2,22 +2,23 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>MAIN PAGE</h1>
-	Списки под вашим авторством:
+	<p><a href="{% url 'newlist' %}">Создать новый список</a></p>
+	<p>Списки под вашим авторством:</p>
 	{% for cur_list in userlists_byauthor %}
-		<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a></p>
+		<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a> <a href="{% url 'deletelist' cur_list.id %}">Удалить</a></p>
 	{% endfor %}
 	
 	{% if userlists_readwrite %}
 		Списки с доступом на чтение/запись:
 		{% for cur_list in userlists_readwrite %}
-			<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a></p>
+			<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a> <a href="{% url 'deletelist' cur_list.id %}">Удалить</a></p>
 		{% endfor %}
 	{% endif %}
 	
 	{% if userlists_readonly %}
 		Списки с доступом на только на чтение:
 		{% for cur_list in userlists_readonly %}
-			<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a></p>
+			<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a> <a href="{% url 'deletelist' cur_list.id %}">Удалить</a></p>
 		{% endfor %}
 	{% endif %}
 {% endblock content %}
