--- a/sharelist/templates/mainpage.html
+++ b/sharelist/templates/mainpage.html
@@ -5,7 +5,7 @@
 	<p><a href="{% url 'newlist' %}">Создать новый список</a></p>
 	<p>Списки под вашим авторством:</p>
 	{% for cur_list in userlists_byauthor %}
-		<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a> <a href="{% url 'deletelist' cur_list.id %}">Удалить</a> <a href="{% url 'controllist' cur_list.id %}">Поделиться</a></p>
+		<p><a href="{% url 'detailpage' cur_list.id %}">{{ cur_list.title }}</a> <a href="{% url 'deletelist' cur_list.id %}">Удалить</a> <a href="{% url 'controllist' cur_list.id %}">Управление доступом</a></p>
 	{% endfor %}
 	
 	{% if userlists_readwrite %}
