--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -2,8 +2,10 @@
 {% load static %}
 {% block content %}
 <form action="" method="post">{% csrf_token %}
-
-	{{ userlist_form.as_p }}
+	<p>Название:</p>
+	<p>{{ userlist_form.title }}</p>
+	<p>Описание: {{ userlist_form.description }}</p>
+	<p>В последний раз список обновлен пользователем {{ userlist_form.last_update_author.value }} в {{ userlist_form.updated_datetime.value }}</p>
 	{{ item_formset.management_form  }}
 	<p>Пункты списка:</p>
 	{% for item in item_formset %}
@@ -11,7 +13,7 @@
 			{{ item.text }}
 			{{ item.status }}
 			{{ item.useritem_id }}
-			В последний раз обновлено пользователем {{ item.last_update_author.value }} в {{ item.updated_datetime.value }}
+			Последнее обновление пункта: пользователем {{ item.last_update_author.value }} в {{ item.updated_datetime.value }}
 		</div>
 	{% endfor %}
 	<div class='add_item'>
