--- a/sharelist/templates/base.html
+++ b/sharelist/templates/base.html
@@ -4,7 +4,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>ShareList</title>	
+		<title>ShareList</title>
+		<link href="{% static 'css/base.css' %}" rel="stylesheet">
+		
 	</head>
 	
 	<body>
