--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -8,14 +8,16 @@
 	<p>В последний раз список обновлен пользователем {{ userlist_form.last_update_author.value }} в {{ userlist_form.updated_datetime.value }}</p>
 	{{ item_formset.management_form  }}
 	<p>Пункты списка:</p>
-	{% for item in item_formset %}
-		<div class="item_formset">
-			{{ item.text }}
-			{{ item.status }}
-			{{ item.useritem_id }}
-			Последнее обновление пункта: пользователем {{ item.last_update_author.value }} в {{ item.updated_datetime.value }}
-		</div>
-	{% endfor %}
+	<ul class="tasks__list">
+		{% for item in item_formset %}
+			<li class="tasks__item">
+				{{ item.text }}
+				{{ item.status }}
+				{{ item.useritem_id }}
+				Последнее обновление пункта: пользователем {{ item.last_update_author.value }} в {{ item.updated_datetime.value }}
+			</li>
+		{% endfor %}
+	</ul>
 	<div class='add_item'>
 	<div>
 	<input type="submit" value="Save">
@@ -26,8 +28,9 @@
 <!-- Include formset plugin - including jQuery dependency -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static 'jquery.formset.js' %}"></script>
+<script src="{% static 'items_move.js' %}"></script>
 <script>
-    $('.item_formset').formset({
+    $('.tasks__item').formset({
         deleteText: 'Удалить',
 		addText: 'Добавить пункт',
     });
