--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -11,6 +11,7 @@
 	<ul class="tasks__list">
 		{% for item in item_formset %}
 			<li class="tasks__item">
+				{{ item.inner_order }}
 				{{ item.text }}
 				{{ item.status }}
 				{{ item.useritem_id }}
@@ -27,8 +28,8 @@
 
 <!-- Include formset plugin - including jQuery dependency -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static 'jquery.formset.js' %}"></script>
-<script src="{% static 'items_move.js' %}"></script>
+<script src="{% static 'js/jquery.formset.js' %}"></script>
+<script src="{% static 'js/items_move.js' %}"></script>
 <script>
     $('.tasks__item').formset({
         deleteText: 'Удалить',
