--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -21,12 +21,15 @@
 	</ul>
 	<div class='add_item'>
 	<div>
+	{% if access_level > 2 %}
 	<input type="submit" value="Save">
+	{% endif %}
 	
 	
 </form>
 
 <!-- Include formset plugin - including jQuery dependency -->
+{% if access_level > 2 %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static 'js/jquery.formset.js' %}"></script>
 <script>
@@ -35,4 +38,5 @@
 		addText: 'Добавить пункт',
     });
 </script>
+{% endif %}
 {% endblock content %}
