--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -22,7 +22,7 @@
 	<div class='add_item'>
 	<div>
 	{% if access_level > 2 %}
-	<input type="submit" value="Save">
+	<input type="submit" value="Сохранить">
 	{% endif %}
 	
 	
