--- a/sharelist/static/css/base.css
+++ b/sharelist/static/css/base.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   margin: 0;
   padding: 0;
 }
@@ -55,4 +55,60 @@ body {
 
 .selected {
   opacity: 0.6;
+} */
+
+
+/* new */
+
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+*{
+	list-style: none;
+	text-decoration: none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Open Sans', sans-serif;
+}
+body{
+	background: #f5f6fa;
+}
+.wrapper .sidebar{
+	background: rgb(5, 68, 104);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 225px;
+	height: 100%;
+	padding: 20px 0;
+	transition: all 0.5s ease;
+}
+.wrapper .sidebar .profile{
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+.container {
+  justify-content: center;
+  margin-left: 260px; padding-top: 22px;
+}
+
+.container_main {
+  justify-content: center;
+  margin:auto;
+  max-width: 800px;
+}
+
+.wrapper .sidebar .profile h3{
+  color: #ffffff;
+  margin: 10px 0 5px;
+}
+
+.wrapper .sidebar .profile p{
+  color: rgb(206, 240, 253);
+  font-size: 14px;
+  margin: 2px;
+}
+
+a, a:visited, a:hover, a:active {
+  color: inherit;
 }
