--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -1,42 +1,40 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load myfilters %}
 {% block content %}
+
 <form action="" method="post">{% csrf_token %}
-	<p>Название:</p>
-	<p>{{ userlist_form.title }}</p>
-	<p>Описание: {{ userlist_form.description }}</p>
-	<p>В последний раз список обновлен пользователем {{ userlist_form.last_update_author.value }} в {{ userlist_form.updated_datetime.value }}</p>
+	<p>{{ userlist_form.title|addclass:'input_class main centered' }}</p>
+	
+	<div class="list">
+	{% for item in item_formset %}
+		<div class="num">
+		{{ item.inner_order|addclass:'digits' }}
+		<div class="item_style"><h3>{{ item.text|addclass:'input_class' }}</h3><h5>В последний раз обновлено в {{ item.updated_datetime.value }} пользователем {{ item.last_update_author.value }}</h5></div>
+		</div>
+	{% endfor %}
+	</div>
+	<!-- <p>Описание: {{ userlist_form.description }}</p> -->
+	<p class="centered more_padding">В последний раз список обновлен пользователем {{ userlist_form.last_update_author.value }} в {{ userlist_form.updated_datetime.value }}</p>
 	{{ item_formset.management_form  }}
-	<p>Пункты списка:</p>
-	<ul class="tasks__list">
-		{% for item in item_formset %}
-			<li class="tasks__item">
-				{{ item.inner_order }}
-				{{ item.text }}
-				{{ item.status }}
-				{{ item.useritem_id }}
-				Последнее обновление пункта: пользователем {{ item.last_update_author.value }} в {{ item.updated_datetime.value }}
-			</li>
-		{% endfor %}
-	</ul>
-	<div class='add_item'>
-	<div>
 	{% if access_level > 2 %}
-	<input type="submit" value="Сохранить">
+	<p class="centered"><input type="submit" value="Сохранить"></p>
 	{% endif %}
 	
 	
 </form>
+
 
 <!-- Include formset plugin - including jQuery dependency -->
 {% if access_level > 2 %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static 'js/jquery.formset.js' %}"></script>
 <script>
-    $('.tasks__item').formset({
+    $('.num').formset({
         deleteText: 'Удалить',
 		addText: 'Добавить пункт',
     });
+	$("textarea").autoHeight()
 </script>
 {% endif %}
 {% endblock content %}
