--- a/sharelist/static/css/base.css
+++ b/sharelist/static/css/base.css
@@ -210,7 +210,7 @@ html body {
 	font-size: 1rem;
 }
 
-input[type=submit] {
+input[type=submit], button[type=submit]{
 	border-style: none;
 	
 	color: #2980b9;
@@ -223,6 +223,6 @@ input[type=submit] {
 	background-color: transparent;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, button[type=submit]:hover{
   opacity: 1;
 }
