--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -10,7 +10,7 @@
 	{% for item in item_formset %}
 		<div class="num">
 		{{ item.inner_order|addclass:'digits' }}
-		<div class="item_style"><h3>{{ item.text|addclass:'input_class disable_drag' }}</h3><h5>В последний раз обновлено в {{ item.updated_datetime.value }} пользователем {{ item.last_update_author.value }}</h5></div>
+		<div class="item_style">{{ item.text|addclass:'input_class disable_drag' }}<h5>В последний раз обновлено в {{ item.updated_datetime.value }} пользователем {{ item.last_update_author.value }}</h5></div>
 		</div>
 	{% endfor %}
 	</div>
