--- a/sharelist/templates/registration/login.html
+++ b/sharelist/templates/registration/login.html
@@ -1,7 +1,7 @@
 <!-- templates/registration/login.html -->
 {% extends 'base.html' %}
 {% block content %}
-<h2>Войти</h2>
+<h2 class="centered">Авторизация</h2>
 <form method="post">
 {% csrf_token %}
 {{ form.as_p }}
