--- a/sharelist/templates/sharepage.html
+++ b/sharelist/templates/sharepage.html
@@ -8,9 +8,7 @@
 		<p>Хотите получить доступ на чтение и запись к списку "{{ title }}"?</p>
 	{% endif %}
 	<input type="hidden" name="mode" value={{ mode }} />
-	<input type="submit" value="Получить доступ">
-	<p>Описание списка:</p>
-	<p>{{ description }}</p>
+	<p class="centered"><input type="submit" value="Получить доступ"></p>
 
 </form>
 
