--- a/sharelist/static/css/base.css
+++ b/sharelist/static/css/base.css
@@ -222,7 +222,8 @@ html body {
 
 .centered {
 	text-align: center;
-	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .more_padding {
