--- a/sharelist/templates/deletepage.html
+++ b/sharelist/templates/deletepage.html
@@ -2,8 +2,8 @@
 {% block content %}
 <form action="" method="post">{% csrf_token %}
 
-	<p>Удалить список "{{ userlist_form.title.value }}"?</p>
-	<p><input type="submit" value="Удалить"></p>
+	<p>Удалить список "{{ userlist_form.title.value }}"? Это действие необратимо!</p>
+	<p class="centered"><input type="submit" value="Удалить"></p>
 
 </form>
 
