--- a/sharelist/templates/removelist.html
+++ b/sharelist/templates/removelist.html
@@ -3,7 +3,7 @@
 <form action="" method="post">{% csrf_token %}
 	<p>Убрать список "{{ userlist_form.title.value }}" из ваших списков?
 	Он останется доступен для всех остальных пользователей с доступом. </p>
-	<p><input type="submit" value="Убрать"></p>
+	<p class="centered"><input type="submit" value="Убрать"></p>
 
 </form>
 
