--- a/sharelist/templates/registration/signup.html
+++ b/sharelist/templates/registration/signup.html
@@ -1,10 +1,15 @@
 <!-- templates/signup.html -->
 {% extends 'base.html' %}
+{% load myfilters %}
 {% block content %}
 <h2 class="centered">Зарегистрироваться</h2>
 <form method="post">
 {% csrf_token %}
-{{ form.as_p }}
+<p class="centered">{{ form.username|addclass:'input_login_field' }}<br>
+{{ form.password1|addclass:'input_login_field' }}<br>
+{{ form.password2|addclass:'input_login_field' }}<br>
+{{ form.password1.help_text }}
+</p>
 <p class="centered"><button type="submit">Создать аккаунт</button></p>
 </form>
 {% endblock content %}
