--- a/sharelist/templates/registration/login.html
+++ b/sharelist/templates/registration/login.html
@@ -5,6 +5,9 @@
 <h2 class="centered">Авторизация</h2>
 <form method="post">
 {% csrf_token %}
+{{ form.non_field_errors }}
+{{ form.username.errors }}
+{{ form.password.errors }}
 <p class="centered">{{ form.username|addclass:'input_login_field' }}<br>
 {{ form.password|addclass:'input_login_field' }}</p>
 <p class="centered"><button type="submit">Войти</button></p>
