--- a/sharelist/templates/detailpage.html
+++ b/sharelist/templates/detailpage.html
@@ -20,7 +20,10 @@
 		{% endif %}
 		
 		{{ item.status|addclass:'status_style' }}
+		
+		
 		<div class="item_style">{{ item.text|addclass:'input_class disable_drag' }}<h5>В последний раз обновлено в {{ item.updated_datetime.value }} пользователем {{ item.last_update_author.value }}</h5></div>
+		
 		
 		{% if access_level >= 2 %}
 		<div class="num_control">
@@ -33,7 +36,9 @@
 	{% endfor %}
 	</div>
 	<!-- <p>Описание: {{ userlist_form.description }}</p> -->
+	{% if not is_new_list %}
 	<p class="centered more_padding">В последний раз список обновлен пользователем {{ userlist_form.last_update_author.value }} в {{ userlist_form.updated_datetime.value }}</p>
+	{% endif %}
 	{{ item_formset.management_form  }}
 	{% if access_level >= 2 %}
 	<p class="centered"><input type="submit" value="Сохранить"></p>
