--- a/sharelist/templates/startpage.html
+++ b/sharelist/templates/startpage.html
@@ -4,6 +4,10 @@
 <p class="centered">Делитесь с друзьями списками и достигайте общих целей!</p>
 
 <p class="centered">
+{% if user.is_authenticated %}
+<a href="{% url 'mainpage' %}">Посмотреть списки, доступные мне</a>
+{% else %}
 <a href="{% url 'login' %}">Войти</a>/<a href="{% url 'signup' %}">Зарегистрироваться</a>
+{% endif %}
 </p>
 {% endblock content %}
