fixed issue #3 about favicon

--- a/sharelist/templates/base.html
+++ b/sharelist/templates/base.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<title>ShareList</title>
 		<link href="{% static 'css/base.css' %}" rel="stylesheet">
+		<link rel="shortcut icon" type="image/png" href="{% static 'favicon-32x32.png' %}"/>
 		
 	</head>
 	
